--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<html>
+<html
+	<!--  Modificacion actual -->
     <head>
         <title>Invie</title>
         <style>
-            body{margin:0}
-            img{max-width:  100%; vertical-align: top;}
+            body { margin:0 }
+             img { max-width:  100%; vertical-align: top; }
 
         </style>
     </head>
     <body>
-        <img src="header.jpg" alt="">  
-        <img src="hero.jpg" alt="">   
+        <img src="header.jpg" alt=""/>  
+        <img src="hero.jpg" alt=""/>   
+        <img src="acustica.jpg" alt="Acustica" />
+     
     </body>
 </html>
