--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html
-	<!--  Modificacion actual -->
+    <!--   Modificacion actual  -->
+    <!-- Imagenes en el Plazi 15 -->
     <head>
         <title>Invie</title>
         <style>
@@ -12,6 +13,6 @@
         <img src="header.jpg" alt=""/>  
         <img src="hero.jpg" alt=""/>   
         <img src="acustica.jpg" alt="Acustica" />
-     
+        <img src="clasica.jpg" alt="Clasica" />
     </body>
 </html>
