--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         </style>
     </head>
     <body>
-        <img src="header.jpg" alt=""/>  
+        <img src="header.jpg" alt="Invie header"/>  
         <img src="hero.jpg" alt=""/>   
         <img src="acustica.jpg" alt="Acustica" />
         <img src="clasica.jpg" alt="Clasica" />
+        <img src="footer.jpg" alt="Invie footer"
     </body>
 </html>
