--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html
     <!--   Modificacion actual  -->
     <!-- Imagenes en el Plazi 15 -->
+
     <head>
-        <title>Invie</title>
+        <title>Invie super guitarras</title>
         <style>
             body { margin:0 }
              img { max-width:  100%; vertical-align: top; }
