--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<html
-    <!--   Modificacion actual  -->
-    <!-- Imagenes en el Plazi 15 -->
-
+<html>
+       <!-- Hotfix Imagenes en el Plazi 15 -->
     <head>
         <title>Invie super guitarras</title>
+        
         <style>
-            body { margin:0 }
-             img { max-width:  100%; vertical-align: top; }
+            body {  
+		margin:0; 
+		border:10px  solid #192b36;   
+	    }
 
+            img { max-width: 100%; 
+                vertical-align: top; 
+            }
+         
         </style>
     </head>
-    <body>
-        <img src="header.jpg" alt="Invie header"/>  
-        <img src="hero.jpg" alt=""/>   
-        <img src="acustica.jpg" alt="Acustica" />
-        <img src="clasica.jpg" alt="Clasica" />
-        <img src="footer.jpg" alt="Invie footer"
+    <body>      
+        <img src="header.jpg" alt=""/>
+	<img src="hero.jpg" alt=""/>
+	<img src="acustica.jpg" alt=""/>
     </body>
 </html>
