--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
         </style>
     </head>
     <body>
-        <img src="header.jpg" alt="Invie header"/>  
-        <img src="hero.jpg" alt=""/>   
-        <img src="acustica.jpg" alt="Acustica" />
-        <img src="clasica.jpg" alt="Clasica" />
-        <img src="footer.jpg" alt="Invie footer"
+        <img src="nueva-version.jpg" alt=""/>
     </body>
 </html>
