--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <head>
         <title>Invie super guitarras</title>
         <style>
-            body { margin:0 }
-             img { max-width:  100%; vertical-align: top; }
-
+		body { margin:0 }
+        	img { max-width:  100%; vertical-align: top; }	
+		img#responsive { display:none;}
+	
+		@media screen and (max-width: 768px)
+		{
+			img#responsive {display:block;}			
+		}
         </style>
     </head>
     <body>
+	<img id="responsive" src="invie-responsive.png" alt="responsive"/>  
         <img src="header.jpg" alt="Invie header"/>  
         <img src="hero.jpg" alt=""/>   
         <img src="acustica.jpg" alt="Acustica" />
         <img src="clasica.jpg" alt="Clasica" />
-        <img src="footer.jpg" alt="Invie footer"
+        <img src="footer.jpg" alt="Invie footer" />
     </body>
 </html>
